; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_locks.c_lease_modify.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_locks.c_lease_modify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_lock = type { i32 }

@F_UNLCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lease_modify(%struct.file_lock** %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.file_lock**, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.file_lock*, align 8
  %7 = alloca i32, align 4
  store %struct.file_lock** %0, %struct.file_lock*** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.file_lock**, %struct.file_lock*** %4, align 8
  %9 = load %struct.file_lock*, %struct.file_lock** %8, align 8
  store %struct.file_lock* %9, %struct.file_lock** %6, align 8
  %10 = load %struct.file_lock*, %struct.file_lock** %6, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @assign_type(%struct.file_lock* %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %7, align 4
  store i32 %16, i32* %3, align 4
  br label %27

17:                                               ; preds = %2
  %18 = load %struct.file_lock*, %struct.file_lock** %6, align 8
  %19 = call i32 @locks_wake_up_blocks(%struct.file_lock* %18)
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @F_UNLCK, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load %struct.file_lock**, %struct.file_lock*** %4, align 8
  %25 = call i32 @locks_delete_lock(%struct.file_lock** %24)
  br label %26

26:                                               ; preds = %23, %17
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %15
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @assign_type(%struct.file_lock*, i32) #1

declare dso_local i32 @locks_wake_up_blocks(%struct.file_lock*) #1

declare dso_local i32 @locks_delete_lock(%struct.file_lock**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
